force-app/main/default/objects/vlocity_cmt__SecurityDeposit__c/vlocity_cmt__SecurityDeposit__c.object-meta.xml
<CustomObject>
    <description>This object describes the security deposit paid by the customer.</description>
    <label>Security Deposit</label>
    <nameField>
        <label>Security Deposit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>