force-app/main/default/objects/vlocity_cmt__SecurityDeposit__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <description>Account Id associated with the security deposit.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Security Deposits</relationshipLabel>
    <relationshipName>SecurityDeposits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>