force-app/main/default/objects/vlocity_cmt__SecurityDeposit__c/fields/vlocity_cmt__DepositIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DepositIdentifier__c</fullName>
    <description>Security deposit ID number - auto populate with a sequential number but allow it to be overwritten with ID from external system - if not possible then auto-populate the sequential number and clients will have to add a custom field for the id from the external system</description>
    <externalId>true</externalId>
    <label>Security Deposit Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>