force-app/main/default/objects/vlocity_cmt__SecurityDeposit__c/fields/vlocity_cmt__DepositType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DepositType__c</fullName>
    <description>Type of deposit made that is not in cash.</description>
    <label>Non-Cash Deposit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Letter of Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>