force-app/main/default/objects/vlocity_cmt__SecurityDeposit__c/fields/vlocity_cmt__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DiscountAmount__c</fullName>
    <description>Amount the agent provided as a discount on the calculated deposit amount.</description>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>