force-app/main/default/objects/vlocity_cmt__SecurityDeposit__c/fields/vlocity_cmt__RequestDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RequestDate__c</fullName>
    <description>Date the Security Deposit was requested.</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>