force-app/main/default/objects/vlocity_cmt__SecurityDeposit__c/fields/vlocity_cmt__WaiverReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__WaiverReason__c</fullName>
    <description>Reason for waiving an assessed deposit.</description>
    <label>Waiver Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer dispute</fullName>
            </value>
            <value>
                <fullName>Customer provided letter of credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>